5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1601_1800.log
== TEST (2019-03-20 18:58:01) 
-- CODE:
a=2
b=1
c=3
print(round)((a**2)+(b**2)+(c**2))//(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)((a**2)+(b**2)+(c**2))//(a+b+c)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:33) 
-- CODE:
a=2
b=1
c=3
print(round((a**2)+(b**2)+(c**2))//(a+b+c), 3)
-- OUTPUT:
2 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:59) 
-- CODE:
a=2
b=1
c=3
print(round((a**2)+(b**2)+(c**2))//(a+b+c),3)
-- OUTPUT:
2 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:59) 
-- CODE:
a=float(input("digite a:"))
b=float(input("digite b:"))
c=float(input("digite c:"))
print(round((a**2)+(b**2)+(c**2))//(a+b+c),3)
-- OUTPUT:
25.0 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:40) 
-- CODE:
a=float(input("digite a:"))
b=float(input("digite b:"))
c=float(input("digite c:"))
print(round((a**2)+(b**2)+(c**2))//(a+b+c)), 3)
-- ERROR:
File "XXXX", line 4
    print(round((a**2)+(b**2)+(c**2))//(a+b+c)), 3)
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:32:17) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
f=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(f, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:32:41) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
f=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(f, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:32:57) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
f=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(f, 7))
-- EXECUTION TIME:
0.20518
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
